@@ -1,9 +1,0 @@
-<?xml version="1.0"?>
-<!-- This file is part of Tryton.  The COPYRIGHT file at the top level of
-this repository contains the full copyright notices and license terms. -->
-<form>
-    <label name="menu"/>
-    <field name="menu"/>
-    <label name="user"/>
-    <field name="user"/>
-</form>
