@@ -1,7 +1,0 @@
-<?xml version="1.0"?>
-<!-- This file is part of Tryton.  The COPYRIGHT file at the top level of
-this repository contains the full copyright notices and license terms. -->
-<tree>
-    <field name="menu" expand="1"/>
-    <field name="user" expand="1"/>
-</tree>
