@@ -49,22 +49,6 @@ this repository contains the full copyright notices and license terms. -->
             <field name="perm_delete" eval="True"/>
         </record>
 
-        <record model="ir.model.access" id="access_ir_ui_menu_favorite">
-            <field name="model">ir.ui.menu.favorite</field>
-            <field name="perm_read" eval="True"/>
-            <field name="perm_write" eval="False"/>
-            <field name="perm_create" eval="False"/>
-            <field name="perm_delete" eval="False"/>
-        </record>
-        <record model="ir.model.access" id="access_ir_ui_menu_favorite_admin">
-            <field name="model">ir.ui.menu.favorite</field>
-            <field name="group" ref="group_admin"/>
-            <field name="perm_read" eval="True"/>
-            <field name="perm_write" eval="True"/>
-            <field name="perm_create" eval="True"/>
-            <field name="perm_delete" eval="True"/>
-        </record>
-
         <record model="ir.model.access" id="access_ir_ui_view">
             <field name="model">ir.ui.view</field>
             <field name="perm_read" eval="True"/>
