@@ -1,3 +1,4 @@
+* Remove favorite management
 * Retry JSON-RPC requests on Service Unavailable
 * Allow resizing the attachment preview panel
 * Set focus on search entry after search
